unified_tests/methods/method_parameter_missing_type_after_self/expect/build.text.stderr
lib.copp:2:31: error: expected identifier
      function show(self, other:) -> string {
                                ^
